[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manga_kindle_8uziak"]

[project]
name = "manga-kindle-8uziak"
version = "0.0.1"
authors = [
  { name="Mateusz Buziak", email="matbuziak@gmail.com" },
]
description = "A package to merge multiple CBZ files into one CBZ file"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/8uziak/manga-kindle"
Issues = "https://github.com/8uziak/manga-kindle/issues"