[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manga_kindle"]

[project]
name = "manga_kindle"
version = "0.0.1"
authors = [
  { name="Mateusz Buziak", email="matbuziak@gmail.com" },
]
description = "Many to one CBZ file converter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/8uziak/manga-kindle"
Issues = "https://github.com/8uziak/manga-kindle/issues"